--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </main>
     </div>
-    <img src="" id="game-over">
+    <img src="game-over2.png" id="game-over">
     <audio src="game-over-song.mp3"></audio>
     <script src="java.js"></script>
   </body>
